logs/dag_id=mlb_parser/run_id=manual__2023-09-15T06:56:47.026278+00:00/task_id=get_avg_high/attempt=1.log
[2023-09-15T06:56:56.576+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: mlb_parser.get_avg_high manual__2023-09-15T06:56:47.026278+00:00 [queued]>
[2023-09-15T06:56:56.583+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: mlb_parser.get_avg_high manual__2023-09-15T06:56:47.026278+00:00 [queued]>
[2023-09-15T06:56:56.585+0000] {taskinstance.py:1361} INFO - Starting attempt 1 of 2
[2023-09-15T06:56:56.595+0000] {taskinstance.py:1382} INFO - Executing <Task(PostgresOperator): get_avg_high> on 2023-09-15 06:56:47.026278+00:00
[2023-09-15T06:56:56.601+0000] {standard_task_runner.py:57} INFO - Started process 21903 to run task
[2023-09-15T06:56:56.606+0000] {standard_task_runner.py:84} INFO - Running: ['***', 'tasks', 'run', 'mlb_parser', 'get_avg_high', 'manual__2023-09-15T06:56:47.026278+00:00', '--job-id', '716', '--raw', '--subdir', 'DAGS_FOLDER/mlb_parser.py', '--cfg-path', '/tmp/tmpa6qmovbg']
[2023-09-15T06:56:56.609+0000] {standard_task_runner.py:85} INFO - Job 716: Subtask get_avg_high
[2023-09-15T06:56:56.649+0000] {task_command.py:415} INFO - Running <TaskInstance: mlb_parser.get_avg_high manual__2023-09-15T06:56:47.026278+00:00 [running]> on host 2e8147b3a465
[2023-09-15T06:56:56.718+0000] {taskinstance.py:1660} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='andy_hsu' AIRFLOW_CTX_DAG_ID='mlb_parser' AIRFLOW_CTX_TASK_ID='get_avg_high' AIRFLOW_CTX_EXECUTION_DATE='2023-09-15T06:56:47.026278+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2023-09-15T06:56:47.026278+00:00'
[2023-09-15T06:56:56.721+0000] {sql.py:274} INFO - Executing: 
            SELECT
                "Name",
                "POS",
                "Team",
                "G",
                "AB",
                "H",
                "BB",
                "SO",
                "OBP",
                "SLG,
                CAST('H' AS float) / CAST('AB' AS float) AS 'AVG',
                CURRENT_DATE AS 'date'
                FROM mlb_data_2023
                WHERE 'AB' > (
                    SELECT AVG('AB') FROM mlb_data_2023
                )
                ORDER BY 'AVG' DESC
                LIMIT 10;
            
[2023-09-15T06:56:56.730+0000] {base.py:73} INFO - Using connection ID 'postgres_mlb_parser_DB' for task execution.
[2023-09-15T06:56:56.742+0000] {base.py:73} INFO - Using connection ID 'postgres_mlb_parser_DB' for task execution.
[2023-09-15T06:56:56.757+0000] {sql.py:418} INFO - Running statement: 
            SELECT
                "Name",
                "POS",
                "Team",
                "G",
                "AB",
                "H",
                "BB",
                "SO",
                "OBP",
                "SLG,
                CAST('H' AS float) / CAST('AB' AS float) AS 'AVG',
                CURRENT_DATE AS 'date'
                FROM mlb_data_2023
                WHERE 'AB' > (
                    SELECT AVG('AB') FROM mlb_data_2023
                )
                ORDER BY 'AVG' DESC
                LIMIT 10;
            , parameters: None
[2023-09-15T06:56:56.763+0000] {taskinstance.py:1943} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/operators/sql.py", line 280, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 392, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 423, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: unterminated quoted identifier at or near ""SLG,
                CAST('H' AS float) / CAST('AB' AS float) AS 'AVG',
                CURRENT_DATE AS 'date'
                FROM mlb_data_2023
                WHERE 'AB' > (
                    SELECT AVG('AB') FROM mlb_data_2023
                )
                ORDER BY 'AVG' DESC
                LIMIT 10;
            "
LINE 12:                 "SLG,
                         ^

[2023-09-15T06:56:56.777+0000] {taskinstance.py:1400} INFO - Marking task as UP_FOR_RETRY. dag_id=mlb_parser, task_id=get_avg_high, execution_date=20230915T065647, start_date=20230915T065656, end_date=20230915T065656
[2023-09-15T06:56:56.787+0000] {standard_task_runner.py:104} ERROR - Failed to execute job 716 for task get_avg_high (unterminated quoted identifier at or near ""SLG,
                CAST('H' AS float) / CAST('AB' AS float) AS 'AVG',
                CURRENT_DATE AS 'date'
                FROM mlb_data_2023
                WHERE 'AB' > (
                    SELECT AVG('AB') FROM mlb_data_2023
                )
                ORDER BY 'AVG' DESC
                LIMIT 10;
            "
LINE 12:                 "SLG,
                         ^
; 21903)
[2023-09-15T06:56:56.823+0000] {local_task_job_runner.py:228} INFO - Task exited with return code 1
[2023-09-15T06:56:56.843+0000] {taskinstance.py:2784} INFO - 0 downstream tasks scheduled from follow-on schedule check
